# cpp-notepad

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: main.cpp  main.hpp
src/app/: app.cpp  app.hpp  event.hpp
src/shared/: datastructure.cpp  datastructure.hpp  event.hpp
src/ui/: window.cpp  window.hpp
